[gd_scene load_steps=27 format=3 uid="uid://d30mw6uvpm14u"]

[ext_resource type="Script" uid="uid://bn4t2io0p0c7b" path="res://scenes/quests/story_quests/inka/1_inka_stealth/inka_stealth_components/inka_enemy/enemy.gd" id="1_2t2r4"]
[ext_resource type="Texture2D" uid="uid://cmuc37qg0hajd" path="res://scenes/quests/story_quests/inka/1_inka_stealth/inka_stealth_components/inka_enemy/Guardias_Parado.png" id="1_nvvbs"]
[ext_resource type="Texture2D" uid="uid://djyvj7o0p0roq" path="res://scenes/quests/story_quests/inka/1_inka_stealth/inka_stealth_components/inka_enemy/Guardias_Caminando.png" id="2_2t2r4"]
[ext_resource type="Texture2D" uid="uid://bxy5mvsmoymhi" path="res://scenes/quests/story_quests/inka/1_inka_stealth/inka_stealth_components/inka_enemy/Guardias_Atacando.png" id="2_dmwl5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r1w2j"]
atlas = ExtResource("2_dmwl5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4wq1"]
atlas = ExtResource("2_dmwl5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5luce"]
atlas = ExtResource("2_dmwl5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmc1t"]
atlas = ExtResource("2_dmwl5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2jnu"]
atlas = ExtResource("2_dmwl5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4yp7"]
atlas = ExtResource("2_dmwl5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqvt7"]
atlas = ExtResource("2_dmwl5")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijynf"]
atlas = ExtResource("2_dmwl5")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dmwl5"]
atlas = ExtResource("1_nvvbs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d40jh"]
atlas = ExtResource("1_nvvbs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx76c"]
atlas = ExtResource("1_nvvbs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqgp3"]
atlas = ExtResource("1_nvvbs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ad2a"]
atlas = ExtResource("2_2t2r4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiqm3"]
atlas = ExtResource("2_2t2r4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j3ko"]
atlas = ExtResource("2_2t2r4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2chwy"]
atlas = ExtResource("2_2t2r4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_beese"]
atlas = ExtResource("2_2t2r4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vi6b"]
atlas = ExtResource("2_2t2r4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_r1w2j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1w2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4wq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5luce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmc1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2jnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4yp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqvt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijynf")
}],
"loop": true,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmwl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d40jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx76c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqgp3")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ad2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiqm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j3ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2chwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_beese")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vi6b")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nvvbs"]
size = Vector2(20, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_dmwl5"]
radius = 27.0185

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d40jh"]
size = Vector2(13, 8)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_2t2r4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_r1w2j")
animation = &"Attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_nvvbs")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_dmwl5")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-16.5, 4)
shape = SubResource("RectangleShape2D_d40jh")

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(-16.5, 4)
shape = SubResource("RectangleShape2D_d40jh")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_attack_area_body_exited"]
